# complex_plugins

./: PortingFilters.md  PortingSIMPLFilter.md
Core/: CMakeLists.txt
Core/data/write_ascii_data_exemplars/float32/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/float64/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/int16/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/int32/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/int64/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/int8/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/uint16/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/uint32/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/uint64/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_ascii_data_exemplars/uint8/: 1_0_exemplar.txt  1_1_exemplar.txt  1_2_exemplar.txt  1_3_exemplar.txt  1_4_exemplar.txt
Core/data/write_csv_data_exemplars/: CSV_Exemplar.csv
Core/docs/: CreateGeometryFilter.md  RotateSampleRefFrameFilter.md
Core/docs/Core/: CalculateArrayHistogram.md  FeatureDataCSVWriter.md  WriteASCIIData.md  WriteBinaryData.md
Core/src/Core/: CoreLegacyUUIDMapping.hpp  CorePlugin.cpp  CorePlugin.hpp  UpdatedUUIDMaps.cpp  UpdatedUUIDMaps.hpp
Core/src/Core/Filters/: AlignSectionsFeatureCentroidFilter.cpp  AlignSectionsFeatureCentroidFilter.hpp  AlignSectionsMisorientationFilter.cpp  AlignSectionsMisorientationFilter.hpp  ArrayCalculatorFilter.cpp  ArrayCalculatorFilter.hpp  CalculateArrayHistogramFilter.cpp  CalculateArrayHistogramFilter.hpp  ConvertColorToGrayScaleFilter.cpp  ConvertDataFilter.cpp  ConvertDataFilter.hpp  CreateGeometryFilter.cpp  CreateGeometryFilter.hpp  ErodeDilateBadDataFilter.cpp  ErodeDilateBadDataFilter.hpp  (+37 more)
Core/test/: AlignSectionsFeatureCentroidTest.cpp  AlignSectionsMisorientationTest.cpp  ArrayCalculatorTest.cpp  CMakeLists.txt  CalculateArrayHistogramTest.cpp  ConvertColorToGrayScaleTest.cpp  ConvertDataTest.cpp  ErodeDilateBadDataTest.cpp  FillBadDataTest.cpp  FindEuclideanDistMapTest.cpp  FindFeatureCentroidsFilterTest.cpp  FindNeighborhoodsTest.cpp  FindShapesFilterTest.cpp  FindSurfaceAreaToVolumeTest.cpp  FindTriangleGeomCentroidsTest.cpp  FindTriangleGeomShapesTest.cpp  FindTriangleGeomSizesTest.cpp  ImportDeformKeyFilev12FilterTest.cpp  ImportDeformKeyFilev12Test.cpp  KMeansTest.cpp  KMedoidsTest.cpp  RemoveFlaggedFeaturesTest.cpp  RemoveMinimumSizeFeaturesTest.cpp  ResampleImageGeomFilterTest.cpp  RotateSampleRefFrameTest.cpp  SharedFeatureFaceTest.cpp  SilhouetteTest.cpp  SplitAttributeArrayTest.cpp  WriteASCIIDataTest.cpp  WriteBinaryDataTest.cpp  test_dirs.hpp.in
OrientationAnalysis/: CMakeLists.txt  PortingOrientationAnalysisFilter.md
OrientationAnalysis/docs/: AlignSectionsMutualInformationFilter.md  CreateEnsembleInfoFilter.md  EnsembleInfoReaderFilter.md  FindGBCDFilter.md  INLWriterFilter.md  VisualizeGBCDGMTFilter.md  VisualizeGBCDPoleFigureFilter.md
OrientationAnalysis/pipelines/: EbsdToH5Ebsd.d3dpipeline  EnembleInfoReader.d3dpipeline  Import_ASCII.d3dpipeline  ReadAng.d3dpipeline  ReadCTF.d3dpipeline
OrientationAnalysis/src/OrientationAnalysis/: OrientationAnalysisLegacyUUIDMapping.hpp  OrientationAnalysisPlugin.cpp  OrientationAnalysisPlugin.hpp
OrientationAnalysis/test/: AlignSectionsMisorientationTest.cpp  AlignSectionsMutualInformationTest.cpp  BadDataNeighborOrientationCheckTest.cpp  CMakeLists.txt  ConvertOrientationsTest.cpp  ConvertQuaternionTest.cpp  CreateEnsembleInfoTest.cpp  EBSDSegmentFeaturesFilterTest.cpp  EbsdToH5EbsdTest.cpp  ExportGBCDGMTFileTest.cpp  ExportGBCDTriangleDataTest.cpp  FindAvgOrientationsTest.cpp  FindFeatureReferenceMisorientationsTest.cpp  FindGBCDTest.cpp  FindKernelAvgMisorientationsTest.cpp  FindMisorientationsTest.cpp  FindSchmidsTest.cpp  FindShapesFilterTest.cpp  FindTriangleGeomShapesTest.cpp  GBCDTriangleDumperTest.cpp  GenerateFaceIPFColoringTest.cpp  GenerateFaceMisorientationColoringTest.cpp  GenerateGBCDPoleFigureTest.cpp  GenerateIPFColorsTest.cpp  GenerateQuaternionConjugateTest.cpp  INLWriterTest.cpp  MergeTwinsTest.cpp  NeighborOrientationCorrelationTest.cpp  ReadAngDataTest.cpp  ReadCtfDataTest.cpp  ReadH5EbsdTest.cpp  ReplaceElementAttributesWithNeighborValuesTest.cpp  RodriguesConvertorTest.cpp  RotateEulerRefFrameTest.cpp  Stereographic3DTest.cpp  VisualizeGBCDGMTTest.cpp  VisualizeGBCDPoleFigureTest.cpp
OrientationAnalysis/test/Disabled_Tests/: ConvertHexGridToSquareGridTest.cpp  ConvertQuaternionTest.cpp  CreateEnsembleInfoTest.cpp  CreateLambertSphereTest.cpp  EMsoftSO3SamplerTest.cpp  EnsembleInfoReaderTest.cpp  FindAvgCAxesTest.cpp  FindBoundaryStrengthsTest.cpp  FindCAxisLocationsTest.cpp  FindDistsToCharactGBsTest.cpp  FindFeatureNeighborCAxisMisalignmentsTest.cpp  FindFeatureReferenceCAxisMisorientationsTest.cpp  FindGBCDMetricBasedTest.cpp  FindGBCDTest.cpp  FindGBPDMetricBasedTest.cpp  FindSlipTransmissionMetricsTest.cpp  FindTwinBoundariesTest.cpp  FindTwinBoundarySchmidFactorsTest.cpp  GenerateFaceIPFColoringTest.cpp  GenerateFaceMisorientationColoringTest.cpp  GenerateOrientationMatrixTransposeTest.cpp  GenerateQuaternionConjugateTest.cpp  INLWriterTest.cpp  ImportEbsdMontageTest.cpp  ImportH5EspritDataTest.cpp  ImportH5OimDataTest.cpp  OrientationUtilityTest.cpp  ReplaceElementAttributesWithNeighborValuesTest.cpp  RodriguesConvertorTest.cpp  Stereographic3DTest.cpp  WritePoleFigureTest.cpp  WriteStatsGenOdfAngleFileTest.cpp
(+847 files in other folders)
